--- a/_posts/blog/2015-01-10-team-mgmt.md
+++ b/_posts/blog/2015-01-10-team-mgmt.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Mid-size team management"
+title: "Mid-size team agile management"
 modified:
 categories: blog
 excerpt:
