--- a/_posts/blog/2015-01-10-team-mgmt.md
+++ b/_posts/blog/2015-01-10-team-mgmt.md
@@ -11,18 +11,18 @@ date: 2015-01-10T18:39:55
 ---
 
 
-Your IT team has grown beyond 4-5 developers, there are several products to be built on your company and those stakeholders have decided to run all those projects in parallel.
+Your IT team has grown from 4-5 developers to 15-20, there are several products to be built and stakeholders have decided to run all those projects in parallel.
 
-While your team and product potfolio was small enough, you were following agile methodologies, running 1/2 weeks sprint along with whole dev team, and a single dev items list where everyone was working on. You wan to keep same idea, but overhead is massive cause the group is too big: daily scrums start becoming inefficient and developers do not really focus due to context switching.
+When your team and product portfolio was small enough, you were following agile methodologies, running 1/2 weeks sprint along with whole dev team, and a single dev items list where everyone was working on. You want to keep same idea, but overhead is massive cause the group is too big: daily scrums start becoming inefficient and developers do not really focus due to context switching.
 
-The delivery solution straightaway will mean setting up small teams, 1 frontend + 1 backend developer, depending on skillsets, and allocate on of those for each project. The problem is that scenario does not cope with risk and contingency at all, since any accident will mean blocking the related project.
+The straightaway solution will mean setting up small teams, arranged depending on skill sets, for each project. The problem is that scenario does not cope with risk and contingency at all, since any accident will mean blocking the related project.
 
-The alternative is arranging **streams**, that is grouping some related projects into one stream, and proceed with the single list within that scope. This is a scheme which has worked pretty well for me:
+A better approach is arranging **streams** in the following way:
 
-* Protect those key projects and set up a specific team for those. Focus will increase efficiency for the whole team and delivery speed.
+* Protect those key projects and set up a specific team for them. Focus will increase efficiency and delivery speed for that team. You can implement something related to Scrum here so you bet for velocity.
 
-* Merge other projects into stream(s) and arrange larger teams to work on it. There will be context switching and stakeholders will need to agree on priorities cross-products, but you will reduce risks and deal with contingency like when you were a smaller team.
+* Merge several projects into stream(s) and arrange larger teams for these. There will be context switching and stakeholders will need to agree on priorities cross-projects, but you will reduce risks and deal with contingency like when you were a smaller team. You can implement Kanban-style so stakeholders can change plan in the middle of sprints.
 
-* Keep business-as-usual tasks and bugs aside, into a different stream with a small team. Whereas important bugs will be part of each product project, and stakeholder will decide which ones to fix urgently, other bugs can be worked out in parallel and not blocking main projects. Same for BaU stuff.
+* Keep business-as-usual tasks and bugs aside, into a different stream with a small team. Whereas important bugs will be part of their oen stream, minor bugs can be worked out in parallel hence not blocking main projects. Same for BaU stuff.
 
-I believe three stream types above can scale up to larger teams, as long as you make sure teams on each stream holds skillsets for project delivery to happen. DevOps tasks can be allocated apart as operations for all streams at once, or even shared among each stream.
+I believe three stream types above can scale up to larger teams, as long as you make sure teams on each stream holds skill sets for project delivery to happen.
