--- a/_posts/blog/2015-01-10-team-mgmt.md
+++ b/_posts/blog/2015-01-10-team-mgmt.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Scaling team and keep agile"
+title: "Scale up team and keep agile"
 modified:
 categories: blog
 excerpt:
